# RUST_Project

./: .gitignore  .mailmap  Cargo.toml  README.md
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 001_init.sql
backend/src/: auth.rs  main.rs  routes.rs  services.rs
client/: Cargo.toml  README.md
client/src/: main.rs  stat.rs
client/src/advisor/: ai.rs
client/src/stat/: datatype.rs  ledger.rs  sync.rs
client/src/tui/: app.rs  mod.rs  ui.rs
src/: main.rs  stat.rs
src/advisor/: ai.rs
src/stat/: datatype.rs  ledger.rs  sample_data.rs
src/tui/: mod.rs  ui.rs
