[package]
name = "newstart"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tui
crossterm = "0.28"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"]}